--- a/eOdznaki-SPA/src/index.html
+++ b/eOdznaki-SPA/src/index.html
@@ -5,6 +5,8 @@
   <title>eOdznaki</title>
   <base href="/">
 
+  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+  <script type="text/javascript" src="https://www.google.com/jsapi"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
